# observatorio-dengue

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  conftest.py  main.py  pyproject.toml
notebooks/: visualizacoes_artigo.ipynb
scripts/: analise_ndvi_temperatura.py  coleta_expandida_2020_2025.py  modelagem_onda3.py  smoke_correlacoes.py  smoke_correlacoes_v2.py  smoke_gee.py  validacao_features.py
src/observatorio_dengue/: config.py  logging_config.py
src/observatorio_dengue/etl/: database.py  gee.py  infodengue.py  openmeteo.py
src/observatorio_dengue/features/: correlacoes.py  cruzamento.py
tests/: test_config.py  test_correlacoes.py  test_cruzamento.py  test_database.py  test_gee.py  test_infodengue.py  test_openmeteo.py
