[project]
name = "observatorio-dengue"
version = "0.1.0"
description = "Observatório Dengue × Clima de Maringá com camada de sensoriamento remoto"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Anuar Mincache" },
]
dependencies = [
    "pandas>=2.2",
    "polars>=1.0",
    "duckdb>=1.1",
    "requests>=2.32",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "loguru>=0.7",
    "epiweeks>=2.3",
]

[project.optional-dependencies]
gee = [
    "earthengine-api>=1.0",
    "geemap>=0.34",
    "geopandas>=1.0",
    "rasterio>=1.4",
    "shapely>=2.0",
]
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
]
viz = [
    "matplotlib>=3.9",
    "plotly>=5.24",
    "folium>=0.18",
    "streamlit>=1.40",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observatorio_dengue"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # Permite caracteres unicode em strings (× — etc.)
    "RUF002",  # Permite caracteres unicode em docstrings
]

[tool.ruff.format]
# Formatter padrão (similar ao Black, mas mais rápido)
quote-style = "double"
indent-style = "space"